MAGNOLIA-3168 added &laquo; to preview buttons (and incidentally converted all unicode encoded strings to lowercase \unnnn code, sorry)
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@33345 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_cs.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_cs.properties
@@ -1,8 +1,8 @@
-buttons.admincentral=Admin Centr\u00E1la
+buttons.admincentral=Admin Centr\u00e1la
 buttons.delete=Smazat
 buttons.edit=Editovat
 buttons.move=P\u0159esunout
-buttons.new=Nov\u00FD
-buttons.preview=N\u00E1hled
+buttons.new=Nov\u00fd
+buttons.preview=&laquo; N\u00e1hled
 buttons.preview.hidden=
 buttons.properties=Atributy
