--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_de.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_de.properties
@@ -3,6 +3,6 @@ buttons.delete         = L\u00f6schen
 buttons.edit           = Bearbeiten
 buttons.move           = Bewegen
 buttons.new            = Neu
-buttons.preview        = Vorschau
+buttons.preview        = &laquo; Vorschau
 buttons.preview.hidden =
 buttons.properties     = Eigenschaften
