--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_es.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_es.properties
@@ -3,6 +3,6 @@ buttons.delete       = Suprimir
 buttons.edit         = Editar
 buttons.move         = Mover
 buttons.new          = Nuevo
-buttons.preview      = inspecci\u00F3n previa
+buttons.preview      = &laquo; inspecci\u00f3n previa
 buttons.preview.hidden =
-buttons.properties   = Caracter\u00EDsticas
+buttons.properties   = Caracter\u00edsticas
