--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_id.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_id.properties
@@ -3,6 +3,6 @@ buttons.delete       = Hapus
 buttons.edit         = Ubah
 buttons.move         = Pindah
 buttons.new          = Baru
-buttons.preview      = Preview
+buttons.preview      = &laquo; Preview
 buttons.preview.hidden =
 buttons.properties   = Properties
