--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_it.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_it.properties
@@ -3,6 +3,6 @@ buttons.delete         = Elimina
 buttons.edit           = Modifica
 buttons.move           = Sposta
 buttons.new            = Nuovo
-buttons.preview        = Anteprima
+buttons.preview        = &laquo; Anteprima
 buttons.preview.hidden =
-buttons.properties     = Propriet\u00E0
+buttons.properties     = Propriet\u00e0
