--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_ja.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_ja.properties
@@ -1,8 +1,8 @@
-buttons.admincentral = \u7BA1\u7406\u753B\u9762\u30C8\u30C3\u30D7\u3078
-buttons.delete       = \u524A\u9664
-buttons.edit         = \u7DE8\u96C6
-buttons.move         = \u79FB\u52D5
-buttons.new          = \u65B0\u898F\u4F5C\u6210
-buttons.preview      = \u30D7\u30EC\u30D3\u30E5\u30FC
+buttons.admincentral = \u7ba1\u7406\u753b\u9762\u30c8\u30c3\u30d7\u3078
+buttons.delete       = \u524a\u9664
+buttons.edit         = \u7de8\u96c6
+buttons.move         = \u79fb\u52d5
+buttons.new          = \u65b0\u898f\u4f5c\u6210
+buttons.preview      = &laquo; \u30d7\u30ec\u30d3\u30e5\u30fc
 buttons.preview.hidden =
-buttons.properties   = \u8A2D\u5B9A\u5909\u66F4
+buttons.properties   = \u8a2d\u5b9a\u5909\u66f4
