--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_nl.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_nl.properties
@@ -3,6 +3,6 @@ buttons.delete       = Verwijder
 buttons.edit         = Bewerk
 buttons.move         = Verplaats
 buttons.new          = Nieuw
-buttons.preview      = Preview
+buttons.preview      = &laquo; Preview
 buttons.preview.hidden =
 buttons.properties   = Eigenschappen
