--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_no.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_no.properties
@@ -3,6 +3,6 @@ buttons.delete       = Slett
 buttons.edit         = Rediger
 buttons.move         = Flytt
 buttons.new          = Ny
-buttons.preview      = Forh\u00E5ndsvis
+buttons.preview      = &laquo; Forh\u00e5ndsvis
 buttons.preview.hidden =
 buttons.properties   = Egenskaper
