--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_pt.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_pt.properties
@@ -3,6 +3,6 @@ buttons.delete       = Apagar
 buttons.edit         = Editar
 buttons.move         = Mover
 buttons.new          = Novo
-buttons.preview      = Antevis\uFFFDo
+buttons.preview      = &laquo; Antevis\u00e3o
 buttons.preview.hidden =
 buttons.properties   = Propriedades
