--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_pt_BR.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_pt_BR.properties
@@ -3,6 +3,6 @@ buttons.delete       = Apager
 buttons.edit         = Editar
 buttons.move         = Mover
 buttons.new          = Novo
-buttons.preview      = Vizualizar
+buttons.preview      = &laquo; Vizualizar
 buttons.preview.hidden =
 buttons.properties   = Propriedades
