--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_sv.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_sv.properties
@@ -3,6 +3,6 @@ buttons.delete       = Ta bort
 buttons.edit         = Redigering
 buttons.move         = Flytta
 buttons.new          = Ny
-buttons.preview      = F\u00F6rhandsvisning
+buttons.preview      = &laquo; F\u00f6rhandsvisning
 buttons.preview.hidden =
 buttons.properties   = Egenskaper
