--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_zh_TW.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_zh_TW.properties
@@ -1,8 +1,8 @@
-buttons.admincentral = \u93BA\u0443\u57D7\u6D93\uE15E\u7E3E
-buttons.delete       = \u9352\uE048\u6ACE
-buttons.edit         = \u7EF6\u3128\u96C6
-buttons.move         = \u7EC9\u8BF2\u5ACA
-buttons.new          = \u93C2\u677F\u7F13
-buttons.preview      = \u95CB\u612F\uE729
+buttons.admincentral = \u93ba\u0443\u57d7\u6d93\ue15e\u7e3e
+buttons.delete       = \u9352\ue048\u6ace
+buttons.edit         = \u7ef6\u3128\u96c6
+buttons.move         = \u7ec9\u8bf2\u5aca
+buttons.new          = \u93c2\u677f\u7f13
+buttons.preview      = &laquo; \u95cb\u612f\ue729
 buttons.preview.hidden =
-buttons.properties   = \u705E\uE101\uFFFD\uFFFD
+buttons.properties   = \u705e\ue101\ufffd\ufffd
