--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_en.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_en.properties
@@ -5,6 +5,6 @@ buttons.enable          = Enable
 buttons.move            = Move
 buttons.new             = New
 buttons.new.noparagraph = No paragraph is available ...
-buttons.preview         = Preview
+buttons.preview         = &laquo; Preview
 buttons.preview.hidden  =
 buttons.properties      = Properties
