--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_fi.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_fi.properties
@@ -1,8 +1,8 @@
 buttons.admincentral = Hallintakeskus
 buttons.delete       = Poista
 buttons.edit         = Muokkaa
-buttons.move         = Siirr\u00E4
+buttons.move         = Siirr\u00e4
 buttons.new          = Uusi
-buttons.preview      = Esikatsele
+buttons.preview      = &laquo; Esikatsele
 buttons.preview.hidden =
 buttons.properties   = Ominaisuudet
