--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_ru.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_ru.properties
@@ -1,8 +1,8 @@
-buttons.admincentral = \u0426\u0435\u043D\u0442\u0440 \u0443\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u044F
-buttons.delete       = \u0423\u0434\u0430\u043B\u0438\u0442\u044C
-buttons.edit         = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
-buttons.move         = \u041F\u0435\u0440\u0435\u043C\u0435\u0441\u0442\u0438\u0442\u044C
-buttons.new          = \u0421\u043E\u0437\u0434\u0430\u0442\u044C
-buttons.preview      = \u041F\u0440\u0435\u0434\u043E\u0441\u043C\u043E\u0442\u0440
+buttons.admincentral = \u0426\u0435\u043d\u0442\u0440 \u0443\u043f\u0440\u0430\u0432\u043b\u0435\u043d\u0438\u044f
+buttons.delete       = \u0423\u0434\u0430\u043b\u0438\u0442\u044c
+buttons.edit         = \u0420\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c
+buttons.move         = \u041f\u0435\u0440\u0435\u043c\u0435\u0441\u0442\u0438\u0442\u044c
+buttons.new          = \u0421\u043e\u0437\u0434\u0430\u0442\u044c
+buttons.preview      = &laquo; \u041f\u0440\u0435\u0434\u043e\u0441\u043c\u043e\u0442\u0440
 buttons.preview.hidden =
-buttons.properties   = \u0421\u0432\u043E\u0439\u0441\u0442\u0432\u0430
+buttons.properties   = \u0421\u0432\u043e\u0439\u0441\u0442\u0432\u0430
