--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_zh_CN.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_zh_CN.properties
@@ -1,8 +1,8 @@
-buttons.admincentral = \u63A7\u5236\u4E2D\u5FC3
+buttons.admincentral = \u63a7\u5236\u4e2d\u5fc3
 buttons.delete       = \u5220\u9664
-buttons.edit         = \u7F16\u8F91
-buttons.move         = \u79FB\u52A8
-buttons.new          = \u65B0\u5EFA
-buttons.preview      = \u9884\u89C8
+buttons.edit         = \u7f16\u8f91
+buttons.move         = \u79fb\u52a8
+buttons.new          = \u65b0\u5efa
+buttons.preview      = &laquo; \u9884\u89c8
 buttons.preview.hidden =
-buttons.properties   = \u5C5E\u6027
+buttons.properties   = \u5c5e\u6027
