MAGNOLIA-3168 * moved &raquo; and &laquo; into translations of the preview buttons' labels. * Authoring components now fallback to their own i18nBasename when the current renderable does not define one
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@33346 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_cs.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_cs.properties
@@ -13,8 +13,8 @@ buttons.editfooter=Editovat pati\u010Dku
 buttons.move=P\u0159esunout
 buttons.new=Nov\u00FD
 buttons.ok=OK
-buttons.preview=N\u00E1hled
-buttons.preview.hidden=
+buttons.preview=&laquo; N\u00E1hled
+buttons.preview.hidden=&raquo;
 buttons.properties=Atributy
 buttons.save=Ulo\u017Eit
 cacheservlet.generate=Generovat cache
