--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_de.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_de.properties
@@ -16,8 +16,8 @@ buttons.editfooter   = Fu\u00dfzeile bearbeiten
 buttons.move         = Bewegen
 buttons.new          = Neu
 buttons.ok           = OK
-buttons.preview      = Vorschau
-buttons.preview.hidden=
+buttons.preview      = &laquo; Vorschau
+buttons.preview.hidden=&raquo;
 buttons.properties   = Eigenschaften
 buttons.save         = Speichern
 
