--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_en.properties
@@ -17,8 +17,8 @@ buttons.move           = Move
 buttons.new            = New
 buttons.noparagraph    = No paragraph is available...
 buttons.ok             = OK
-buttons.preview        = Preview
-buttons.preview.hidden =
+buttons.preview        = &laquo; Preview
+buttons.preview.hidden =&raquo;
 buttons.properties     = Properties
 buttons.save           = Save
 
