--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_es.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_es.properties
@@ -15,7 +15,7 @@ buttons.editfooter   = Corregir el Pie
 buttons.move         = Mover
 buttons.new          = Nuevo
 buttons.ok           = AUTORIZADO
-buttons.preview      = inspecci\u00F3n previa
+buttons.preview      = &laquo; inspecci\u00F3n previa
 buttons.preview.hidden=
 buttons.properties   = Caracter\u00EDsticas
 buttons.save         = Archivar
