--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_fi.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_fi.properties
@@ -16,8 +16,8 @@ buttons.editfooter   = Muokkaa alaotsaketta
 buttons.move         = Siirr\u00E4
 buttons.new          = Uusi
 buttons.ok           = OK
-buttons.preview      = Esikatsele
-buttons.preview.hidden=
+buttons.preview      = &laquo; Esikatsele
+buttons.preview.hidden=&raquo;
 buttons.properties   = Ominaisuudet
 buttons.save         = Tallenna
 
