--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_fr.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_fr.properties
@@ -16,8 +16,8 @@ buttons.editfooter   = Modifier le pied de page
 buttons.move         = D\u00e9placer
 buttons.new          = Nouveau
 buttons.ok           = Confirmer
-buttons.preview      = Aper\u00e7u
-buttons.preview.hidden=
+buttons.preview      = &laquo; Aper\u00e7u
+buttons.preview.hidden=&raquo;
 buttons.properties   = Propri\u00e9t\u00e9s
 buttons.save         = Enregistrer
 
