--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_id.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_id.properties
@@ -16,8 +16,8 @@ buttons.editfooter   = Ubah Catatan Kaki
 buttons.move         = Pindah
 buttons.new          = Baru
 buttons.ok           = OK
-buttons.preview      = Preview
-buttons.preview.hidden=
+buttons.preview      = &laquo; Preview
+buttons.preview.hidden=&raquo;
 buttons.properties   = Properties
 buttons.save         = Simpan
 
