--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_it.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_it.properties
@@ -16,8 +16,8 @@ buttons.editfooter     = Modifica Footer
 buttons.move           = Sposta
 buttons.new            = Nuovo
 buttons.ok             = OK
-buttons.preview        = Anteprima
-buttons.preview.hidden = <!-- -->
+buttons.preview        = &laquo; Anteprima
+buttons.preview.hidden = &raquo;
 buttons.properties     = Propriet\u00E0
 buttons.save           = Salva
 
