--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_ja.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_ja.properties
@@ -16,8 +16,8 @@ buttons.editfooter   = \u30D5\u30C3\u30BF\u30FC\u7DE8\u96C6
 buttons.move         = \u79FB\u52D5
 buttons.new          = \u65B0\u898F\u4F5C\u6210
 buttons.ok           = OK
-buttons.preview      = \u30D7\u30EC\u30D3\u30E5\u30FC
-buttons.preview.hidden=
+buttons.preview      = &laquo; \u30D7\u30EC\u30D3\u30E5\u30FC
+buttons.preview.hidden=&raquo;
 buttons.properties   = \u8A2D\u5B9A\u5909\u66F4
 buttons.save         = \u4FDD\u5B58
 
