--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_nl.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_nl.properties
@@ -16,8 +16,8 @@ buttons.editfooter   = Bewerk Footer
 buttons.move         = Verplaats
 buttons.new          = Nieuw
 buttons.ok           = OK
-buttons.preview      = Preview
-buttons.preview.hidden=
+buttons.preview      = &laquo; Preview
+buttons.preview.hidden=&raquo;
 buttons.properties   = Eigenschappen
 buttons.save         = Sla op
 
