--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_pt.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_pt.properties
@@ -16,8 +16,8 @@ buttons.editfooter   = Editar rodap\u00e9
 buttons.move         = Mover
 buttons.new          = Novo
 buttons.ok           = OK
-buttons.preview      = Antevis\u00e3o
-buttons.preview.hidden=
+buttons.preview      = &laquo; Antevis\u00e3o
+buttons.preview.hidden=&raquo;
 buttons.properties   = Propriedades
 buttons.save         = Gravar
 
