--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_sv.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_sv.properties
@@ -16,8 +16,8 @@ buttons.editfooter   = Redigera sidfot
 buttons.move         = Flytta
 buttons.new          = Ny
 buttons.ok           = OK
-buttons.preview      = F\u00F6rhandsvisning
-buttons.preview.hidden=
+buttons.preview      = &laquo; F\u00F6rhandsvisning
+buttons.preview.hidden=&raquo;
 buttons.properties   = Egenskaper
 buttons.save         = Spara
 
