--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_tr.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_tr.properties
@@ -16,8 +16,8 @@ buttons.editfooter   = Dipnotu d\u00FCzenle
 buttons.move         = Ta\u015F\u0131
 buttons.new          = Yeni
 buttons.ok           = Tamam
-buttons.preview      = \u00D6nizleme
-buttons.preview.hidden=
+buttons.preview      = &laquo; \u00D6nizleme
+buttons.preview.hidden=&raquo;
 buttons.properties   = \u00D6zellikleri
 buttons.save         = Kaydet
 
