--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_zh_CN.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_zh_CN.properties
@@ -16,8 +16,8 @@ buttons.editfooter   = \u7F16\u8F91\u9875\u5C3E
 buttons.move         = \u79FB\u52A8
 buttons.new          = \u65B0\u5EFA
 buttons.ok           = \u786E\u8BA4
-buttons.preview      = \u9884\u89C8
-buttons.preview.hidden=
+buttons.preview      = &laquo; \u9884\u89C8
+buttons.preview.hidden=&raquo;
 buttons.properties   = \u5C5E\u6027
 buttons.save         = \u4FDD\u5B58
 
