--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_de.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_de.properties
@@ -4,5 +4,5 @@ buttons.edit           = Bearbeiten
 buttons.move           = Bewegen
 buttons.new            = Neu
 buttons.preview        = &laquo; Vorschau
-buttons.preview.hidden =
+buttons.preview.hidden = &raquo;
 buttons.properties     = Eigenschaften
