--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_en.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_en.properties
@@ -6,5 +6,5 @@ buttons.move            = Move
 buttons.new             = New
 buttons.new.noparagraph = No paragraph is available ...
 buttons.preview         = &laquo; Preview
-buttons.preview.hidden  =
+buttons.preview.hidden  = &raquo;
 buttons.properties      = Properties
