--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_es.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_es.properties
@@ -1,8 +1,8 @@
-buttons.admincentral = AdminCentral
-buttons.delete       = Suprimir
-buttons.edit         = Editar
-buttons.move         = Mover
-buttons.new          = Nuevo
-buttons.preview      = &laquo; inspecci\u00f3n previa
-buttons.preview.hidden =
-buttons.properties   = Caracter\u00edsticas
+buttons.admincentral   = AdminCentral
+buttons.delete         = Suprimir
+buttons.edit           = Editar
+buttons.move           = Mover
+buttons.new            = Nuevo
+buttons.preview        = &laquo; inspecci\u00f3n previa
+buttons.preview.hidden = &raquo;
+buttons.properties     = Caracter\u00edsticas
