--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_fi.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_fi.properties
@@ -1,8 +1,8 @@
-buttons.admincentral = Hallintakeskus
-buttons.delete       = Poista
-buttons.edit         = Muokkaa
-buttons.move         = Siirr\u00e4
-buttons.new          = Uusi
-buttons.preview      = &laquo; Esikatsele
-buttons.preview.hidden =
-buttons.properties   = Ominaisuudet
+buttons.admincentral   = Hallintakeskus
+buttons.delete         = Poista
+buttons.edit           = Muokkaa
+buttons.move           = Siirr\u00e4
+buttons.new            = Uusi
+buttons.preview        = &laquo; Esikatsele
+buttons.preview.hidden = &raquo;
+buttons.properties     = Ominaisuudet
