--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_it.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_it.properties
@@ -4,5 +4,5 @@ buttons.edit           = Modifica
 buttons.move           = Sposta
 buttons.new            = Nuovo
 buttons.preview        = &laquo; Anteprima
-buttons.preview.hidden =
+buttons.preview.hidden = &raquo;
 buttons.properties     = Propriet\u00e0
