--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_pt_BR.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_pt_BR.properties
@@ -1,8 +1,8 @@
-buttons.admincentral = AdminCentral
-buttons.delete       = Apager
-buttons.edit         = Editar
-buttons.move         = Mover
-buttons.new          = Novo
-buttons.preview      = &laquo; Vizualizar
-buttons.preview.hidden =
-buttons.properties   = Propriedades
+buttons.admincentral   = AdminCentral
+buttons.delete         = Apager
+buttons.edit           = Editar
+buttons.move           = Mover
+buttons.new            = Novo
+buttons.preview        = &laquo; Vizualizar
+buttons.preview.hidden = &raquo;
+buttons.properties     = Propriedades
