--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_tr.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_tr.properties
@@ -1,8 +1,8 @@
-buttons.admincentral = AdminCentral
-buttons.delete       = Sil
-buttons.edit         = D\u00fczenle
-buttons.move         = Ta\u015f\u0131
-buttons.new          = Yeni
-buttons.preview      = &laquo; \u00d6nizleme
-buttons.preview.hidden =
-buttons.properties   = \u00d6zellikleri
+buttons.admincentral   = AdminCentral
+buttons.delete         = Sil
+buttons.edit           = D\u00fczenle
+buttons.move           = Ta\u015f\u0131
+buttons.new            = Yeni
+buttons.preview        = &laquo; \u00d6nizleme
+buttons.preview.hidden = &raquo;
+buttons.properties     = \u00d6zellikleri
