--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_no.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_no.properties
@@ -16,8 +16,8 @@ buttons.editfooter   = Rediger bunntekst
 buttons.move         = Flytt
 buttons.new          = Ny
 buttons.ok           = OK
-buttons.preview      = Forh\u00E5ndsvis
-buttons.preview.hidden=
+buttons.preview      = &laquo; Forh\u00E5ndsvis
+buttons.preview.hidden=&raquo;
 buttons.properties   = Egenskaper
 buttons.save         = Lagre
 
