--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_pt_BR.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_pt_BR.properties
@@ -16,8 +16,8 @@ buttons.editfooter   = Editar rodap\uFFFD
 buttons.move         = Mover
 buttons.new          = Novo
 buttons.ok           = OK
-buttons.preview      = Vizualizar
-buttons.preview.hidden=
+buttons.preview      = &laquo; Vizualizar
+buttons.preview.hidden=&raquo;
 buttons.properties   = Propriedades
 buttons.save         = Salvar
 
