--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_ru.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_ru.properties
@@ -16,7 +16,7 @@ buttons.editfooter   = \u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u0444\u
 buttons.move         = \u041F\u0435\u0440\u0435\u043C\u0435\u0441\u0442\u0438\u0442\u044C
 buttons.new          = \u0421\u043E\u0437\u0434\u0430\u0442\u044C
 buttons.ok           = OK
-buttons.preview      = \u041F\u0440\u0435\u0434\u043E\u0441\u043C\u043E\u0442\u0440
+buttons.preview      = &laquo; \u041F\u0440\u0435\u0434\u043E\u0441\u043C\u043E\u0442\u0440
 buttons.preview.hidden=
 buttons.properties   = \u0421\u0432\u043E\u0439\u0441\u0442\u0432\u0430
 buttons.save         = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
