--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_zh_TW.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_zh_TW.properties
@@ -16,8 +16,8 @@ buttons.editfooter   = \u7EF6\u3128\u96C6\u95CB\u4F78\u71AC
 buttons.move         = \u7EC9\u8BF2\u5ACA
 buttons.new          = \u93C2\u677F\u7F13
 buttons.ok           = \u7EB0\u9E3F\u735A
-buttons.preview      = \u95CB\u612F\uE729
-buttons.preview.hidden=
+buttons.preview      = &laquo; \u95CB\u612F\uE729
+buttons.preview.hidden=&raquo;
 buttons.properties   = \u705E\uE101\uFFFD\uFFFD
 buttons.save         = \u6DC7\u6FC6\u74E8
 
