--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_cs.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_cs.properties
@@ -4,5 +4,5 @@ buttons.edit=Editovat
 buttons.move=P\u0159esunout
 buttons.new=Nov\u00fd
 buttons.preview=&laquo; N\u00e1hled
-buttons.preview.hidden=
+buttons.preview.hidden=&raquo;
 buttons.properties=Atributy
