--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_fr.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_fr.properties
@@ -1,8 +1,8 @@
-buttons.admincentral = Console d'administration
-buttons.delete       = Effacer
-buttons.edit         = \u00c9diter
-buttons.move         = D\u00e9placer
-buttons.new          = Nouveau
-buttons.preview      = &laquo; Aper\u00e7u
-buttons.preview.hidden =
-buttons.properties   = Propri\u00e9t\u00e9s
+buttons.admincentral   = Console d'administration
+buttons.delete         = Effacer
+buttons.edit           = \u00c9diter
+buttons.move           = D\u00e9placer
+buttons.new            = Nouveau
+buttons.preview        = &laquo; Aper\u00e7u
+buttons.preview.hidden = &raquo;
+buttons.properties     = Propri\u00e9t\u00e9s
