--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_sv.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_sv.properties
@@ -1,8 +1,8 @@
-buttons.admincentral = AdminCentral
-buttons.delete       = Ta bort
-buttons.edit         = Redigering
-buttons.move         = Flytta
-buttons.new          = Ny
-buttons.preview      = &laquo; F\u00f6rhandsvisning
-buttons.preview.hidden =
-buttons.properties   = Egenskaper
+buttons.admincentral   = AdminCentral
+buttons.delete         = Ta bort
+buttons.edit           = Redigering
+buttons.move           = Flytta
+buttons.new            = Ny
+buttons.preview        = &laquo; F\u00f6rhandsvisning
+buttons.preview.hidden = &raquo;
+buttons.properties     = Egenskaper
