--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_zh_TW.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_zh_TW.properties
@@ -1,8 +1,8 @@
-buttons.admincentral = \u93ba\u0443\u57d7\u6d93\ue15e\u7e3e
-buttons.delete       = \u9352\ue048\u6ace
-buttons.edit         = \u7ef6\u3128\u96c6
-buttons.move         = \u7ec9\u8bf2\u5aca
-buttons.new          = \u93c2\u677f\u7f13
-buttons.preview      = &laquo; \u95cb\u612f\ue729
-buttons.preview.hidden =
-buttons.properties   = \u705e\ue101\ufffd\ufffd
+buttons.admincentral   = \u93ba\u0443\u57d7\u6d93\ue15e\u7e3e
+buttons.delete         = \u9352\ue048\u6ace
+buttons.edit           = \u7ef6\u3128\u96c6
+buttons.move           = \u7ec9\u8bf2\u5aca
+buttons.new            = \u93c2\u677f\u7f13
+buttons.preview        = &laquo; \u95cb\u612f\ue729
+buttons.preview.hidden = &raquo;
+buttons.properties     = \u705e\ue101\ufffd\ufffd
