replaced wrong unicode for small 'e' letter with diaeresis
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/trunk@33531 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_nl.properties
+++ b/magnolia-module-admininterface/src/main/resources/info/magnolia/module/admininterface/messages_nl.properties
@@ -68,7 +68,7 @@ dialog.richedit.applaylink             = Pas link toe
 dialog.richedit.applaystyle            = Pas stijl toe
 dialog.richedit.backgroundcolor        = Achtergrondkleur
 dialog.richedit.bold                   = Vet
-dialog.richedit.cleancopypast          = Schoon kopi\u00C3\u00ABren/plakken
+dialog.richedit.cleancopypast          = Schoon kopi\u00EBren/plakken
 dialog.richedit.cleanpaste             = 'Schoon' plakken
 dialog.richedit.info                   = info
 dialog.richedit.insert                 = Voeg tekst in
@@ -78,7 +78,7 @@ dialog.richedit.link                   = Link
 dialog.richedit.nopaste.js             = Uw browser ondersteunt geen 'schoon plakken'
 dialog.richedit.numberedlist           = Genummerde lijst
 dialog.richedit.pasteUsingThisButton   = Plak tekst d.m.v deze button
-dialog.richedit.pastehelp.js           = Tekst die gekopi\u00C3\u00ABerd is vanuit sommige toepassingen (bijv. Word of Excel) zou informatie kunnen bevatten die de opmaak van uw webcontent verstoort.\n\n Door alleen ctrl-v te gebruiken wordt deze informatie ook daadwerkelijk toegevoegd.
+dialog.richedit.pastehelp.js           = Tekst die gekopi\u00EBerd is vanuit sommige toepassingen (bijv. Word of Excel) zou informatie kunnen bevatten die de opmaak van uw webcontent verstoort.\n\n Door alleen ctrl-v te gebruiken wordt deze informatie ook daadwerkelijk toegevoegd.
 dialog.richedit.pastetext              = Plak (Ctrl-V) tekst in het veld hieronder, en gebruik dan de knoppen om het in de editor scherm te plakken.
 dialog.richedit.redo                   = Redo
 dialog.richedit.removelink             = Verwijder link
@@ -204,7 +204,7 @@ tree.error.delete                          = Can't delete\:
 tree.error.move                            = Can't move\:
 tree.error.rename                          = Can't rename\:
 tree.exportnode.confirm.text.js            = Weet u zeker dat u wilt doorgaan?
-tree.exportnode.confirm.title.js           = {0} wordt naar xml ge\u00C3\u00ABxporteerd.
+tree.exportnode.confirm.title.js           = {0} wordt naar xml ge\u00EBxporteerd.
 tree.loading.js                            = Laden...
 tree.menu.export                           = Exporteer boom naar xml
 tree.menu.import                           = Import from xml
