[maven-release-plugin]  copy for branch magnolia-4.3
git-svn-id: file:///home/migrator/subversion-migration/svn-repo-copy/community/magnolia/branches/magnolia-4.3@34908 a15fbcf9-bee4-0310-bafe-d02d26ad3b5f

--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_es.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_es.properties
@@ -1,8 +1,10 @@
-buttons.admincentral   = AdminCentral
-buttons.delete         = Suprimir
-buttons.edit           = Editar
-buttons.move           = Mover
-buttons.new            = Nuevo
-buttons.preview        = &laquo; inspecci\u00f3n previa
-buttons.preview.hidden = &raquo;
-buttons.properties     = Caracter\u00edsticas
+buttons.admincentral    = AdminCentral
+buttons.delete          = Suprimir
+buttons.edit            = Editar
+# missing translation for: buttons.enable
+buttons.move            = Mover
+buttons.new             = Nuevo
+# missing translation for: buttons.new.noparagraph
+buttons.preview         = &laquo; inspecci\u00f3n previa
+buttons.preview.hidden  = &raquo;
+buttons.properties      = Caracter\u00edsticas
