--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_nl.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_nl.properties
@@ -1,8 +1,10 @@
-buttons.admincentral   = AdminCentral
-buttons.delete         = Verwijder
-buttons.edit           = Bewerk
-buttons.move           = Verplaats
-buttons.new            = Nieuw
-buttons.preview        = &laquo; Preview
-buttons.preview.hidden = &raquo;
-buttons.properties     = Eigenschappen
+buttons.admincentral    = AdminCentral
+buttons.delete          = Verwijder
+buttons.edit            = Bewerk
+# missing translation for: buttons.enable
+buttons.move            = Verplaats
+buttons.new             = Nieuw
+# missing translation for: buttons.new.noparagraph
+buttons.preview         = &laquo; Preview
+buttons.preview.hidden  = &raquo;
+buttons.properties      = Eigenschappen
