--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_no.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_no.properties
@@ -1,8 +1,10 @@
-buttons.admincentral   = AdminCentral
-buttons.delete         = Slett
-buttons.edit           = Rediger
-buttons.move           = Flytt
-buttons.new            = Ny
-buttons.preview        = &laquo; Forh\u00e5ndsvis
-buttons.preview.hidden = &raquo;
-buttons.properties     = Egenskaper
+buttons.admincentral    = AdminCentral
+buttons.delete          = Slett
+buttons.edit            = Rediger
+# missing translation for: buttons.enable
+buttons.move            = Flytt
+buttons.new             = Ny
+# missing translation for: buttons.new.noparagraph
+buttons.preview         = &laquo; Forh\u00e5ndsvis
+buttons.preview.hidden  = &raquo;
+buttons.properties      = Egenskaper
