--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_pt_BR.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_pt_BR.properties
@@ -1,8 +1,10 @@
-buttons.admincentral   = AdminCentral
-buttons.delete         = Apager
-buttons.edit           = Editar
-buttons.move           = Mover
-buttons.new            = Novo
-buttons.preview        = &laquo; Vizualizar
-buttons.preview.hidden = &raquo;
-buttons.properties     = Propriedades
+buttons.admincentral    = AdminCentral
+buttons.delete          = Apager
+buttons.edit            = Editar
+# missing translation for: buttons.enable
+buttons.move            = Mover
+buttons.new             = Novo
+# missing translation for: buttons.new.noparagraph
+buttons.preview         = &laquo; Vizualizar
+buttons.preview.hidden  = &raquo;
+buttons.properties      = Propriedades
