--- a/magnolia-module-workflow/src/main/resources/info/magnolia/module/workflow/messages_cs.properties
+++ b/magnolia-module-workflow/src/main/resources/info/magnolia/module/workflow/messages_cs.properties
@@ -1,21 +1,37 @@
-#Created by JInto - www.guh-software.de
-#Tue Apr 03 14:08:29 CEST 2007
-dialogs.editWorkItem.comment=Koment\u00E1\u0159
-dialogs.editWorkItem.message=Zpr\u00E1va (v\u00FDjimka)
-dialogs.editWorkItem.path=Cesta
-dialogs.editWorkItem.repository=Repository
-dialogs.editWorkItem.tabMain=Polo\u017Eka
-dialogs.editWorkItem.username=U\u017Eivatel
-inbox.cancel=Zp\u011Bt
-inbox.comment=Koment\u00E1\u0159
-inbox.date=Datum
-inbox.edit=Editovat polo\u017Eku
-inbox.item=Polo\u017Eka
-inbox.path=Cesta
-inbox.proceed=Potvrdit
-inbox.reject=Zam\u00EDtnout
-inbox.repository=Repository
-inbox.show=Zobrazit seznam
-inbox.task=\u00DAkol
-inbox.workflow=Workflow
-workflow.started=Schvalovac\u00ED proces (workflow) byl \u00FAsp\u011B\u0161n\u011B spu\u0161t\u011Bn. P\u0159\u00EDslu\u0161n\u00FD u\u017Eivatel jej nalezne v menu \u00DAkoly
+inbox.comment    = Koment\u00e1\u0159
+inbox.proceed    = Potvrdit
+inbox.reject     = Zam\u00edtnout
+inbox.cancel     = Zp\u011bt
+inbox.show       = Zobrazit seznam
+inbox.edit       = Editovat polo\u017eku
+inbox.workflow   = Workflow
+
+inbox.task       = \u00dakol
+inbox.date       = Datum
+inbox.item       = Polo\u017eka
+inbox.path       = Cesta
+inbox.repository = Repository
+
+dialogs.editWorkItem.comment    = Koment\u00e1\u0159
+dialogs.editWorkItem.path       = Cesta
+dialogs.editWorkItem.tabMain    = Polo\u017eka
+dialogs.editWorkItem.repository = Repository
+dialogs.editWorkItem.username   = U\u017eivatel
+dialogs.editWorkItem.message    = Zpr\u00e1va (v\u00fdjimka)
+
+# missing translation for: dialogs.editActivationWorkItem.tabActivation
+# missing translation for: dialogs.editActivationWorkItem.tabActivation.recursive
+# missing translation for: dialogs.editActivationWorkItem.tabActivation.subpages
+# missing translation for: dialogs.editActivationWorkItem.tabActivation.startDate
+# missing translation for: dialogs.editActivationWorkItem.tabActivation.endDate
+
+# missing translation for: subpages.version
+# missing translation for: subpages.date
+# missing translation for: subpages.status
+# missing translation for: subpages.show
+
+# missing translation for: workItem.comment.recursive
+
+# missing translation for: menu.inbox
+
+workflow.started=Schvalovac\u00ed proces (workflow) byl \u00fasp\u011b\u0161n\u011b spu\u0161t\u011bn. P\u0159\u00edslu\u0161n\u00fd u\u017eivatel jej nalezne v menu \u00dakoly
