--- a/magnolia-module-workflow/src/main/resources/info/magnolia/module/workflow/messages_fr.properties
+++ b/magnolia-module-workflow/src/main/resources/info/magnolia/module/workflow/messages_fr.properties
@@ -1,22 +1,37 @@
-
-dialogs.editWorkItem.comment    = Commentaires
-dialogs.editWorkItem.message    = Message d'erreur
-dialogs.editWorkItem.path       = Chemin
-dialogs.editWorkItem.repository = Repository
-dialogs.editWorkItem.tabMain    = T\u00E2che
-dialogs.editWorkItem.username   = Utilisateur
-
-inbox.cancel     = Annuler
 inbox.comment    = Commenter
-inbox.date       = Date
-inbox.edit       = \u00C9diter la t\u00E2che
-inbox.item       = T\u00E2che
-inbox.path       = Chemin
-inbox.proceed    = Ex\u00E9cuter
+inbox.proceed    = Ex\u00e9cuter
 inbox.reject     = Refuser
-inbox.repository = Repository
+inbox.cancel     = Annuler
 inbox.show       = Afficher le contenu
-inbox.task       = T\u00E2che
+inbox.edit       = \u00c9diter la t\u00e2che
 inbox.workflow   = Processus
 
-workflow.started = Le processus a \u00E9t\u00E9 activ\u00E9. La t\u00E2che est transf\u00E9r\u00E9e dans la bo\u00EEte \u00E0 lettres appropri\u00E9e.
+inbox.task       = T\u00e2che
+inbox.date       = Date
+inbox.item       = T\u00e2che
+inbox.path       = Chemin
+inbox.repository = Repository
+
+dialogs.editWorkItem.comment    = Commentaires
+dialogs.editWorkItem.path       = Chemin
+dialogs.editWorkItem.tabMain    = T\u00e2che
+dialogs.editWorkItem.repository = Repository
+dialogs.editWorkItem.username   = Utilisateur
+dialogs.editWorkItem.message    = Message d'erreur
+
+# missing translation for: dialogs.editActivationWorkItem.tabActivation
+# missing translation for: dialogs.editActivationWorkItem.tabActivation.recursive
+# missing translation for: dialogs.editActivationWorkItem.tabActivation.subpages
+# missing translation for: dialogs.editActivationWorkItem.tabActivation.startDate
+# missing translation for: dialogs.editActivationWorkItem.tabActivation.endDate
+
+# missing translation for: subpages.version
+# missing translation for: subpages.date
+# missing translation for: subpages.status
+# missing translation for: subpages.show
+
+# missing translation for: workItem.comment.recursive
+
+# missing translation for: menu.inbox
+
+workflow.started=Le processus a \u00e9t\u00e9 activ\u00e9. La t\u00e2che est transf\u00e9r\u00e9e dans la bo\u00eete \u00e0 lettres appropri\u00e9e.
