--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_id.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_id.properties
@@ -1,8 +1,10 @@
-buttons.admincentral   = AdminCentral
-buttons.delete         = Hapus
-buttons.edit           = Ubah
-buttons.move           = Pindah
-buttons.new            = Baru
-buttons.preview        = &laquo; Preview
-buttons.preview.hidden = &raquo;
-buttons.properties     = Properties
+buttons.admincentral    = AdminCentral
+buttons.delete          = Hapus
+buttons.edit            = Ubah
+# missing translation for: buttons.enable
+buttons.move            = Pindah
+buttons.new             = Baru
+# missing translation for: buttons.new.noparagraph
+buttons.preview         = &laquo; Preview
+buttons.preview.hidden  = &raquo;
+buttons.properties      = Properties
