--- a/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_tr.properties
+++ b/magnolia-module-templating-components/src/main/resources/info/magnolia/module/templatingcomponents/messages_tr.properties
@@ -1,8 +1,10 @@
-buttons.admincentral   = AdminCentral
-buttons.delete         = Sil
-buttons.edit           = D\u00fczenle
-buttons.move           = Ta\u015f\u0131
-buttons.new            = Yeni
-buttons.preview        = &laquo; \u00d6nizleme
-buttons.preview.hidden = &raquo;
-buttons.properties     = \u00d6zellikleri
+buttons.admincentral    = AdminCentral
+buttons.delete          = Sil
+buttons.edit            = D\u00fczenle
+# missing translation for: buttons.enable
+buttons.move            = Ta\u015f\u0131
+buttons.new             = Yeni
+# missing translation for: buttons.new.noparagraph
+buttons.preview         = &laquo; \u00d6nizleme
+buttons.preview.hidden  = &raquo;
+buttons.properties      = \u00d6zellikleri
