--- a/magnolia-module-workflow/src/main/resources/info/magnolia/module/workflow/messages_it.properties
+++ b/magnolia-module-workflow/src/main/resources/info/magnolia/module/workflow/messages_it.properties
@@ -1,35 +1,37 @@
-inbox.comment = Commento
-inbox.proceed = Procedi
-inbox.reject  = Rifiuta
-inbox.cancel  = Cancella
-inbox.show  = Mostra contenuti
-inbox.edit  = Modifica workitem
-inbox.workflow = Workflow
+inbox.comment    = Commento
+inbox.proceed    = Procedi
+inbox.reject     = Rifiuta
+inbox.cancel     = Cancella
+inbox.show       = Mostra contenuti
+inbox.edit       = Modifica workitem
+inbox.workflow   = Workflow
 
-inbox.task    = Task
-inbox.date    = Data
-inbox.item    = Workitem
-inbox.path    = Path
+inbox.task       = Task
+inbox.date       = Data
+inbox.item       = Workitem
+inbox.path       = Path
 inbox.repository = Repository
 
-dialogs.editWorkItem.comment = Commento
-dialogs.editWorkItem.path = Path
-dialogs.editWorkItem.tabMain = Workitem
+dialogs.editWorkItem.comment    = Commento
+dialogs.editWorkItem.path       = Path
+dialogs.editWorkItem.tabMain    = Workitem
 dialogs.editWorkItem.repository = Repository
-dialogs.editWorkItem.username = Username
-dialogs.editWorkItem.message = Messaggio (Eccezione)
+dialogs.editWorkItem.username   = Username
+dialogs.editWorkItem.message    = Messaggio (Eccezione)
 
-dialogs.editActivationWorkItem.tabActivation = Attivazione
+dialogs.editActivationWorkItem.tabActivation           = Attivazione
 dialogs.editActivationWorkItem.tabActivation.recursive = Incl. sottopagine
-dialogs.editActivationWorkItem.tabActivation.subpages = Sottopagine
+dialogs.editActivationWorkItem.tabActivation.subpages  = Sottopagine
+# missing translation for: dialogs.editActivationWorkItem.tabActivation.startDate
+# missing translation for: dialogs.editActivationWorkItem.tabActivation.endDate
 
 subpages.version = Versione
-subpages.date = Data
-subpages.status = Stato
-subpages.show = Mostra contenuti
+subpages.date    = Data
+subpages.status  = Stato
+subpages.show    = Mostra contenuti
 
-workItem.comment.recursive = Incl. sottopagine!
+workItem.comment.recursive = Incl. sottopagine\!
 
 menu.inbox = Inbox
 
-workflow.started=Il workflow \u00E8 stato avviato. L'oggetto \u00E8 stato inviato alla casella apposita.
+workflow.started=Il workflow \u00e8 stato avviato. L'oggetto \u00e8 stato inviato alla casella apposita.
